// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addUserOrderToDB 1`] = `
Object {
  "account": "0xAccount",
  "amount": 456,
  "balance": 123,
  "currentSequence": 2,
  "fill": 234,
  "initialSequence": 1,
  "orderHash": "0xOrderHash",
  "pair": "pair",
  "price": 0.123456789,
  "side": "bid",
  "status": "status",
  "type": "type",
  "updatedBy": "updatedBy",
}
`;

exports[`addUserOrderToDB error 1`] = `
Object {
  "account": "0xAccount",
  "amount": 456,
  "balance": 123,
  "currentSequence": 2,
  "fill": 234,
  "initialSequence": 1,
  "orderHash": "0xOrderHash",
  "pair": "pair",
  "price": 0.123456789,
  "side": "bid",
  "status": "status",
  "type": "type",
  "updatedBy": "updatedBy",
}
`;

exports[`constructNewLiveOrder 1`] = `
Object {
  "account": "makerAddress",
  "amount": 1.23e-16,
  "balance": 1.23e-16,
  "currentSequence": 0,
  "fill": 0,
  "initialSequence": 0,
  "orderHash": "0xOrderHash",
  "pair": "pair",
  "price": 0.26973684,
  "side": "bid",
}
`;

exports[`constructNewLiveOrder 2`] = `
Object {
  "account": "makerAddress",
  "amount": 4.56e-16,
  "balance": 4.56e-16,
  "currentSequence": 0,
  "fill": 0,
  "initialSequence": 0,
  "orderHash": "0xOrderHash",
  "pair": "pair",
  "price": 3.70731707,
  "side": "ask",
}
`;

exports[`getAllLiveOrdersInPersistence add and update in redis 1`] = `
Object {
  "0xOrderHash": "update",
}
`;

exports[`getAllLiveOrdersInPersistence only add in redis 1`] = `
Object {
  "0xOrderHash": "add",
}
`;

exports[`getAllLiveOrdersInPersistence update in redis and exist in db 1`] = `
Object {
  "0xOrderHash": "update",
}
`;

exports[`getLiveOrderInPersistence in add queue 1`] = `"liveOrder"`;

exports[`getLiveOrderInPersistence in update queue 1`] = `"liveOrder"`;

exports[`getLiveOrderInPersistence only in db 1`] = `
Object {
  "liveOrder": "test",
}
`;

exports[`parseSignedOrder 1`] = `
Object {
  "exchangeAddress": "exchangeAddress",
  "expirationTimeSeconds": "1234567890",
  "feeRecipientAddress": "feeRecipientAddress",
  "makerAddress": "makerAddress",
  "makerAssetAmount": "123",
  "makerAssetData": "makerAssetData",
  "makerFee": "0",
  "salt": "789",
  "senderAddress": "senderAddress",
  "signature": "signature",
  "takerAddress": "takerAddress",
  "takerAssetAmount": "456",
  "takerAssetData": "takerAssetData",
  "takerFee": "0",
}
`;

exports[`persistOrder add 1`] = `
Array [
  Array [
    "orders|cache",
    "add|0xOrderHash",
    "{\\"method\\":\\"add\\",\\"liveOrder\\":{\\"test\\":\\"liveOrder\\",\\"initialSequence\\":123,\\"currentSequence\\":123},\\"signedOrder\\":\\"may or may not exist\\"}",
  ],
]
`;

exports[`persistOrder add 2`] = `
Array [
  Array [
    "orders|queue",
    "add|0xOrderHash",
  ],
]
`;

exports[`persistOrder add 3`] = `
Array [
  Array [
    "orders|pubsub|pair",
    "{\\"method\\":\\"add\\",\\"pair\\":\\"pair\\",\\"side\\":\\"side\\",\\"orderHash\\":\\"0xOrderHash\\",\\"balance\\":-1,\\"signedOrder\\":\\"may or may not exist\\"}",
  ],
]
`;

exports[`persistOrder add 4`] = `
Array [
  Array [
    Object {
      "currentSequence": 123,
      "initialSequence": 123,
      "test": "liveOrder",
    },
    "add",
    "confirmed",
    "relayer",
  ],
]
`;

exports[`persistOrder not add 1`] = `
Array [
  Array [
    "orders|cache",
    "method|0xOrderHash",
    "{\\"method\\":\\"method\\",\\"liveOrder\\":{\\"amount\\":100,\\"currentSequence\\":123,\\"balance\\":100}}",
  ],
]
`;

exports[`persistOrder not add 2`] = `
Array [
  Array [
    "orders|queue",
    "method|0xOrderHash",
  ],
]
`;

exports[`persistOrder not add 3`] = `
Array [
  Array [
    "orders|pubsub|pair",
    "{\\"method\\":\\"method\\",\\"pair\\":\\"pair\\",\\"side\\":\\"side\\",\\"orderHash\\":\\"0xOrderHash\\",\\"balance\\":123}",
  ],
]
`;

exports[`persistOrder not add 4`] = `
Array [
  Array [
    Object {
      "amount": 100,
      "balance": 100,
      "currentSequence": 123,
    },
    "method",
    "confirmed",
    "relayer",
  ],
]
`;

exports[`processOrderQueue add 1`] = `
Array [
  Array [
    Object {
      "orderHash": "0xOrderHash",
      "signedOrder": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
    },
  ],
]
`;

exports[`processOrderQueue add 2`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "balance": 123,
      "currentSequence": 2,
      "fill": 234,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "price": 0.123456789,
      "side": "bid",
    },
  ],
]
`;

exports[`processOrderQueue add 3`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "balance": 123,
      "currentSequence": 2,
      "fill": 234,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "price": 0.123456789,
      "side": "bid",
    },
    "add",
    "confirmed",
    "orderProcessor",
  ],
]
`;

exports[`processOrderQueue add 4`] = `
Array [
  Array [
    "orders|cache",
    "add|0xOrderHash",
  ],
]
`;

exports[`processOrderQueue empty queue 1`] = `
Array [
  Array [
    "orders|queue",
  ],
]
`;

exports[`processOrderQueue in queue but no key value 1`] = `
Array [
  Array [
    "orders|cache",
    "method|0xOrderHash",
  ],
]
`;

exports[`processOrderQueue terminate 1`] = `
Array [
  Array [
    "0xOrderHash",
  ],
]
`;

exports[`processOrderQueue terminate 2`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "balance": 123,
      "currentSequence": 2,
      "fill": 234,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "price": 0.123456789,
      "side": "bid",
    },
  ],
]
`;

exports[`processOrderQueue terminate 3`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "balance": 123,
      "currentSequence": 2,
      "fill": 234,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "price": 0.123456789,
      "side": "bid",
    },
    "terminate",
    "confirmed",
    "orderProcessor",
  ],
]
`;

exports[`processOrderQueue terminate 4`] = `
Array [
  Array [
    "orders|cache",
    "terminate|0xOrderHash",
  ],
]
`;

exports[`processOrderQueue update 1`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "balance": 123,
      "currentSequence": 2,
      "fill": 234,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "price": 0.123456789,
      "side": "bid",
    },
  ],
]
`;

exports[`processOrderQueue update 2`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "balance": 123,
      "currentSequence": 2,
      "fill": 234,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "price": 0.123456789,
      "side": "bid",
    },
    "update",
    "confirmed",
    "orderProcessor",
  ],
]
`;

exports[`processOrderQueue update 3`] = `
Array [
  Array [
    "orders|cache",
    "update|0xOrderHash",
  ],
]
`;
